# razer-cooling-pad-mac

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  lint.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_toml.rs  curve_points.rs  hex_decode.rs  parse_color.rs  parse_speed.rs  response.rs
packaging/homebrew/: padctl.rb
src/: config.rs  curve.rs  device.rs  doctor.rs  fan.rs  lib.rs  lighting.rs  logging.rs  main.rs  packet.rs  parse.rs  power.rs  reactive.rs  rgb.rs  service.rs  temp.rs  watch.rs
src/temp/: linux.rs  mac.rs  mod.rs
tests/: properties.rs
