[package]
name = "padctl"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "CLI to control the fans and lights of a Razer Laptop Cooling Pad on macOS"
license = "MIT"
repository = "https://github.com/hbmartin/razer-cooling-pad-mac"
readme = "README.md"
keywords = ["razer", "cooling-pad", "hid", "fan-control", "macos"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
ctrlc = { version = "3", features = ["termination"] }
log = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
hidapi = { version = "2.6", default-features = false, features = ["macos-shared-device"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }

[profile.release]
lto = true
strip = true
